:lipstick: remove linebreaks on the move buttons

--- a/game.html
+++ b/game.html
@@ -53,10 +53,10 @@ You're in a maze of twisty little passages, all alike
 <div id="room"></div>
 <div>
 Where do you want to go?<br />
-<button onclick="go(0, -1);">North</button><br />
-<button onclick="go(1, 0);">East</button><br />
-<button onclick="go(0, 1);">South</button><br />
-<button onclick="go(-1, 0);">West</button><br />
+<button onclick="go(0, -1);">North</button>
+<button onclick="go(1, 0);">East</button>
+<button onclick="go(0, 1);">South</button>
+<button onclick="go(-1, 0);">West</button>
 </div>
 <canvas id="canvas" width="640" height="480"></canvas>
 <script>
